--- a/LMSystem/LMSystemUI/Pages/Items.razor
+++ b/LMSystem/LMSystemUI/Pages/Items.razor
@@ -7,7 +7,7 @@
 
 <h1 class="page-heading text-uppercase mb-4">Our Inventory:</h1>
 <div class="description-and-search-bar">
-    <input type="text" size="50" placeholder="Inventory"
+    <input type="text" size="50" placeholder="Search Items In Our Inventory"
            aria-label="Search box"
            @oninput="((txt) => OnSearchInput((string)txt.Value))" />
     <div>
