--- a/LMSystem/LMSystemUI/Pages/InvoiceDetails.razor
+++ b/LMSystem/LMSystemUI/Pages/InvoiceDetails.razor
@@ -3,37 +3,52 @@
 @inject IMongoInvoiceData invoiceData
 @inject NavigationManager navManager
 
-<h3>Invoice Details:</h3>
-<br />
+<h1 class="page-heading text-uppercase mb-4">Invoice Details:</h1>
 @if (invoice is not null)
 {
-    <div><h3>Title: @invoice.InvoiceTitle</h3></div>
-    <br />
-    <div>Invoice #: @invoice.InvoiceNumber</div>
-    <div>Status: @invoice.InvoiceStatus</div>
-    <div>Created: @invoice.DateCreated.ToString("MM.dd.yyyy")</div>
-    <div>Created By: @invoice.CreatedBy.FirstName @invoice.CreatedBy.LastName</div>
-    <br />
-    <div><h3>Items:</h3></div>
-    <br/>
-    <button @onclick="(() => AddItemsToInvoice(invoice.Id))">Add Items</button>
-    <br />
-    @if (invoice.Items is not null)
-    {
-        <br />
-        <Virtualize Items="@invoice.Items" Context="s" OverscanCount="5">
-            <div>Name: @s.ItemName</div>
-            <div>Price: @s.Price</div>
-            <br />
-        </Virtualize>
+    <h2 class="page-heading">Title: @invoice.InvoiceTitle</h2>
+    <div class="element-details">
+        <div>Invoice #: @invoice.InvoiceNumber</div>
+        <div>Status: @invoice.InvoiceStatus</div>
+        <div>Created: @invoice.DateCreated.ToString("MM.dd.yyyy")</div>
+        <div>Created By: @invoice.CreatedBy.FirstName @invoice.CreatedBy.LastName</div>
         <br />
         <div>Total: $@invoice.Total</div>
-    }
-    <br />
-    @if (invoice.Items is null)
-     {
-        <div> No items in the invoice</div>
-     }
+        <div><h3 class="details-heading">Items:</h3></div>
+        <button @onclick="(() => AddItemsToInvoice(invoice.Id))">Add Items</button>
+        <br />
+        @if (invoice.Items is not null)
+        {
+            <br/>
+            <div class="table">
+                <table class="invoice-items-table">
+                    <thead class="table-header">
+                        <tr>
+                            <th>Item Name</th>
+                            <th>Item Price</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <Virtualize Items="@invoice.Items" Context="s" OverscanCount="5">
+                            <tr>
+                                <td>@s.ItemName</td>
+                                <td>@s.Price</td>
+                                <td class="table-button"><button class="remove-item-button">Remove</button></td>
+                            </tr>
+                        </Virtualize>
+                    </tbody>
+                </table>
+                <br/>
+                <div>Total: $@invoice.Total</div>
+            </div>
+        }
+        @if (invoice.Items is null)
+        {
+            <br />
+            <div> No items in the invoice</div>
+        }
+    </div>
 }
 
 @code {
