--- a/LMSystem/LMSystemUI/Pages/_Layout.cshtml
+++ b/LMSystem/LMSystemUI/Pages/_Layout.cshtml
@@ -12,6 +12,9 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="LMSystemUI.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+
+    <link href="~/_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
 </head>
 <body>
     @RenderBody()
