--- a/LMSystem/LMSystemUI/_Imports.razor
+++ b/LMSystem/LMSystemUI/_Imports.razor
@@ -8,4 +8,7 @@
 @using Microsoft.JSInterop
 @using LMSystemUI
 @using LMSystemUI.Shared
+@using Blazored
+@using Blazored.Toast
+@using Blazored.Toast.Services
 
