--- a/LMSystem/LMSystemUI/Shared/MainLayout.razor
+++ b/LMSystem/LMSystemUI/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using Blazored.Toast.Configuration
 
 <PageTitle>LMSystemUI</PageTitle>
 
@@ -13,4 +14,11 @@
         </article>
     </main>
 </div>
+
+<BlazoredToasts Position="ToastPosition.BottomRight"
+                Timeout="2"
+                IconType="IconType.FontAwesome"
+                SuccessClass="success-toast-override"
+                SuccessIcon="fa fa-thumbs-up"
+                ErrorIcon="fa fa-big"/>
 
